<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="Weather_forecast">Weather Forecast</string>

    <string name="retry">Retry</string>
    <string name="no_results">No Result</string>
    <string name="currently">Currently</string>
    <string name="today_paris">Today, Paris!</string>
    <string name="detail_header">"header of weather "</string>
    <string name="fab_content_desc">show weather status</string>

    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="temp_max">Max</string>
    <string name="temp_min">Min</string>
    <string name="feels_like">Feels like</string>
    <string name="windSpeed">Wind</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="detail">Details</string>
</resources>