<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"
        tools:ignore="MergeRootFrame">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:animateLayoutChanges="true"
            android:background="?attr/colorSurface"
            android:fitsSystemWindows="true"
            android:stateListAnimator="@animator/show_toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleGravity="center"
                app:collapsedTitleTextAppearance="@style/TextAppearance.WeatherForecast.Title"
                app:contentScrim="?attr/colorSurface"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:statusBarScrim="?attr/colorSurface"
                app:titleEnabled="false"
                app:toolbarId="@id/toolbar">

                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_bar_height"
                    android:contentDescription="@string/detail_header"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:srcCompat="@drawable/cold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_bar_height"
                    android:background="@drawable/black_gradient" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_temp"
                        style="@style/TextAppearance.WeatherForecast.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginEnd="@dimen/margin_small"
                        android:gravity="center"
                        android:textSize="45sp"
                        tools:text="24" />

                    <TextView
                        android:id="@+id/tv_status"
                        style="@style/TextAppearance.WeatherForecast.ListItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginEnd="@dimen/margin_small"
                        android:gravity="center"
                        tools:text="is Cold!" />
                </LinearLayout>


                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin"
                    app:menu="@menu/menu_detail"
                    app:navigationIcon="@drawable/ic_back"
                    app:titleTextColor="?attr/colorOnSurface" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <TextView
                    android:id="@+id/lb_sunrise"
                    style="@style/TextAppearance.WeatherForecast.SubTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:gravity="start"
                    android:text="@string/sunrise"
                    app:layout_constraintEnd_toEndOf="@id/tv_sunrise"
                    app:layout_constraintStart_toStartOf="@id/tv_sunrise"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_sunrise"
                    style="@style/TextAppearance.WeatherForecast.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:drawablePadding="@dimen/margin_small"
                    android:gravity="center"
                    app:drawableStartCompat="@drawable/ic_sunrise"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/lb_sunrise"
                    tools:text="03:55" />

                <TextView
                    android:id="@+id/lb_sunset"
                    style="@style/TextAppearance.WeatherForecast.SubTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset"
                    app:layout_constraintEnd_toEndOf="@id/tv_sunset"
                    app:layout_constraintStart_toStartOf="@id/tv_sunset"
                    app:layout_constraintTop_toTopOf="@id/lb_sunrise" />

                <TextView
                    android:id="@+id/tv_sunset"
                    style="@style/TextAppearance.WeatherForecast.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:drawablePadding="@dimen/margin_small"
                    android:gravity="start"
                    app:drawableStartCompat="@drawable/ic_sunset"
                    app:layout_constraintStart_toStartOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/lb_sunset"
                    tools:text="22:55" />

                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:background="?attr/colorAccent"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_label" />

                <TextView
                    android:id="@+id/tv_label"
                    style="@style/TextAppearance.WeatherForecast.SubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:padding="@dimen/margin_normal"
                    android:text="@string/detail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_sunrise" />

                <include
                    android:id="@+id/v1"
                    layout="@layout/item_weather_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_small"
                    app:layout_constraintEnd_toStartOf="@+id/v2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_label" />

                <include
                    android:id="@+id/v2"
                    layout="@layout/item_weather_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/v3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@+id/v1"
                    app:layout_constraintTop_toTopOf="@+id/v1" />

                <include
                    android:id="@+id/v3"
                    layout="@layout/item_weather_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@+id/v2"
                    app:layout_constraintTop_toTopOf="@+id/v2" />

                <include
                    android:id="@+id/v4"
                    layout="@layout/item_weather_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    app:layout_constraintEnd_toStartOf="@+id/v5"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/v1" />

                <include
                    android:id="@+id/v5"
                    layout="@layout/item_weather_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/v6"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@+id/v4"
                    app:layout_constraintTop_toTopOf="@+id/v4" />

                <include
                    android:id="@+id/v6"
                    layout="@layout/item_weather_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@+id/v5"
                    app:layout_constraintTop_toTopOf="@+id/v5" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
